<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/llField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_email">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_firebase"
        android:src="@drawable/logo_firebase" />


    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llField"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_signin"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite" />


    <Button
        android:id="@+id/button_signin_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/dang_nhap_voi_facebook"
        android:textColor="@color/colorWhite"
        android:visibility="gone" />

</RelativeLayout>
